ajusta el estilo

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -68,5 +68,20 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
+
+body {
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #f0f0f0;
+  color: #333;
+}
+button {
+  background-color: #008037;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
